--- a/public/css/website/style.css
+++ b/public/css/website/style.css
@@ -86,36 +86,13 @@ body, html {
   left: 50px;
 }
 
-#top input[type=text] {
+#top img {
   padding-left: 5px;
-  font-size: 15px;
   position: absolute;
-  height: 37px;
-  width: 168px;
+  height: 100px;
   top: 30px;
   right: 53px;
-  border: none;
-  background: none;
-  border-bottom: 1px #fff solid;
-  color: #FFF;
 }
-
-#top input[type=text]::placeholder {
-  color: #FFF;
-}
-
-#top input[type=submit] {
-  position: absolute;
-  top: 39px;
-  right: 240px;
-
-  width: 20px;
-  height: 20px;
-  border: none;
-  background-color: rgba(0,0,0,0);
-  background-image: url("/assets/Shape.svg");
-}
-
 
 
 /**********************************************************************************************
@@ -427,41 +404,30 @@ footer a {
   justify-content: center;
 }
 
-
-
-
-
-.smallPolaroid4 {
-  width: 20%;
-  height: 30%;
-  background-color: #fff;
-  margin: 0% 1%;
-}
-
-.smallPolaroid4 img {
-  width: 90%;
-  height: 75%;
-  margin: 5%;
-  margin-bottom: 3%;
-}
-
-.smallPolaroid4 p {
+#links {
+  position: absolute;
+  bottom: 10%;
   width: 100%;
-  font-size: 20px;
-  margin-top: -4%;
-  text-align: center;
-  color: #000;
-  font-weight: 300;
 }
 
-#photoList4 {
-  width: 80%;
-  margin: 7% 10%;
+#links ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
 
-#links {
+#links li {
+  font-size: 20px;
+  margin: 0 20px;
+}
 
+#links span {
+  font-weight: bold;
+}
+
+#links a {
+  text-decoration: none;
 }
