--- a/public/css/website/style.css
+++ b/public/css/website/style.css
@@ -198,15 +198,19 @@ footer a {
 **********************************************************************************************/
 #aboutBackground .aboutTxt {
   position: absolute;
-  text-align: center;
-  font-size: 40px;
-  top: 25%;
+  /*text-align: center;*/
+  font-size: 20px;
+  top: 15%;
 
   width: 745px;
   margin-left: auto;
   margin-right: auto;
   left: 0;
   right: 0;
+}
+
+#aboutBackground .aboutTxt ol {
+  margin-left: 35px;
 }
 
 
