--- a/public/css/website/style.css
+++ b/public/css/website/style.css
@@ -16,7 +16,7 @@ body, html {
 *************************************** O V E R L A Y S ***************************************
 **********************************************************************************************/
 .background:before{
-  position: absolute;
+  position: fixed;
   content:" ";
   top:0;
   left:0;
@@ -42,34 +42,18 @@ body, html {
   background-image: url("/assets/pexels-bottle.png");
 }
 
-#personalisedBackground {
-  background-image: url("/assets/pexels-caps.png");
-}
-
 #photosBackground {
   background-image: url("/assets/pexels-row.png");
 }
 
-#searchBackground {
-  background-image: url("/assets/pexels-caps.png");
-}
-
-#voteBackground {
-  background-image: url("/assets/pexels-row.png");
-}
-
-#votedBackground {
-  background-image: url("/assets/pexels-row.png");
-}
-
 .background {
-  position: relative;
+  position: fixed;
   height: 100%;
+  width: 100%;
+  background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  display: flex;
-  flex-wrap:wrap;
 }
 
 
@@ -77,19 +61,18 @@ body, html {
 *************************************** T O P - M E N U ***************************************
 **********************************************************************************************/
 #top {
-  font-size: 30px;
+  font-size: 50px;
 }
 
 #top p {
-  position: absolute;
+  position: fixed;
   top: 30px;
   left: 50px;
 }
 
 #top img {
-  padding-left: 5px;
-  position: absolute;
-  height: 100px;
+  position: fixed;
+  height: 110px;
   top: 30px;
   right: 53px;
 }
@@ -107,14 +90,14 @@ body, html {
 }
 
 #nextPage, #prevPage {
-  position: absolute;
-  width: 90px;
-  top: 45%;
+  position: fixed;
+  width: 140px;
+  bottom: 10%;
   text-decoration: none;
 }
 
 #nextPage img, #prevPage img {
-  width: 60px;
+  width: 110px;
   margin: 0 15px;
 }
 
@@ -122,23 +105,32 @@ body, html {
   width: 100%;
   text-align: center;
   font-weight: 300;
-  font-size: 30px;
+  font-size: 40px;
 }
 
 
 /**********************************************************************************************
 ***************************************** F O O T E R *****************************************
 **********************************************************************************************/
+footer {
+  position: fixed;
+  background-color: #000;
+  height: 80px;
+  bottom: -10px;
+  width: 100%;
+  padding-top: 20px;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+}
+
 footer img {
-  position: absolute;
-  bottom: 32px;
-  left: 50px;
+  height: 30px;
+  margin-right: 10px;-
 }
 
 footer p {
-  position: absolute;
-  bottom: 32px;
-  left: 81px;
+  font-size: 30px;
 }
 
 footer a {
@@ -146,77 +138,320 @@ footer a {
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /**********************************************************************************************
 ******************************************* H O M E *******************************************
 **********************************************************************************************/
-#homeBackground h1 {
+#home h1 {
   position: absolute;
-  font-size: 100px;
-  top: 38%;
-
-  width: 848px;
-  margin-left: auto;
-  margin-right: auto;
-  left: 0;
-  right: 0;
+  font-size: 80px;
+  top: 40%;
+  margin: 0;
+  width: 100%;
+  text-align: center;
 }
 
-#homeBackground h3 {
+#home h3 {
   position: absolute;
-  font-size: 40px;
-  top: 52%;
-
-  width: 402px;
-  margin-left: auto;
-  margin-right: auto;
-  left: 0;
-  right: 0;
+  font-size: 50px;
+  top: 48%;
+  margin: 0;
+  width: 100%;
+  text-align: center;
 }
 
 
 /**********************************************************************************************
 ****************************************** A B O U T ******************************************
 **********************************************************************************************/
-#aboutBackground .aboutTxt {
+#about .aboutTxt {
   position: absolute;
-  /*text-align: center;*/
-  font-size: 20px;
+  font-size: 40px;
   top: 15%;
-
-  width: 745px;
-  margin-left: auto;
-  margin-right: auto;
-  left: 0;
-  right: 0;
+  width: 60%;
+  margin: 0 20%;
+  margin-bottom: 20%;
 }
 
-#aboutBackground .aboutTxt ol {
+#about .aboutTxt ol {
   margin-left: 35px;
 }
+
+/**********************************************************************************************
+***************************************** P H O T O S *****************************************
+**********************************************************************************************/
+.smallPolaroid {
+  width: 100%;
+  height: 30%;
+  background-color: #fff;
+  margin: 5% 3%;
+}
+
+.smallPolaroid img {
+  width: 90%;
+  height: 75%;
+  margin: 5%;
+  margin-bottom: 3%;
+}
+
+.smallPolaroid p {
+  width: 100%;
+  font-size: 40px;
+  margin-top: 0%;
+  text-align: center;
+  color: #000;
+  font-weight: 300;
+}
+
+#photoList {
+  position: absolute;
+  width: 60%;
+  margin: 0 20%;
+  padding: 20% 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+#links {
+  position: fixed;
+  bottom: 90px;
+  width: 100%;
+  background-color: #2E97EF;
+}
+
+#links ul {
+  list-style-type: none;
+  margin: 10px 0;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+#links li {
+  font-size: 35px;
+  margin: 0px 20px;
+}
+
+#links span {
+  font-weight: bold;
+}
+
+#links a {
+  text-decoration: none;
+}
+
+
+
+
+
+@media (min-width : 768px) and (max-width : 1024px) {
+  /* For tablets: */
+  .background {
+    position: relative;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    flex-wrap:wrap;
+  }
+  #top {
+    font-size: 30px;
+  }
+  #top img {
+    height: 100px;
+  }
+  /**** P A G I N G ****/
+  #nextPage, #prevPage {
+    width: 90px;
+    top: 45%;
+  }
+  #nextPage img, #prevPage img {
+    width: 60px;
+  }
+  #nextPage p, #prevPage p {
+    font-size: 30px;
+  }
+  /**** F O O T E R ****/
+  footer {
+    background-color: none;
+    height: 0px;
+    bottom: 0;
+    width: 100%;
+    padding: 0;
+  }
+  footer img {
+    height: 25px;
+    position: absolute;
+    bottom: 32px;
+    left: 50px;
+  }
+  footer p {
+    position: absolute;
+    bottom: 28px;
+    left: 81px;
+    font-size: 20px;
+  }
+  /**** H O M E ****/
+  #home h1 {
+    font-size: 80px;
+    top: 38%;
+  }
+  #home h3 {
+    font-size: 40px;
+    top: 52%;
+  }
+  /**** A B O U T ****/
+  #about .aboutTxt {
+    font-size: 17px;
+  }
+  /**** P H O T O S ****/
+  .smallPolaroid {
+    margin: 5px 3%;
+    width: 20%;
+  }
+  .smallPolaroid p {
+    font-size: 90%;
+    margin-top: -4%;
+  }
+  #photoList {
+    top: 10%;
+    padding: 0;
+    width: 80%;
+    height: auto;
+    margin: 0 10%;
+  }
+  #links {
+    position: absolute;
+    bottom: 10%;
+    background-color: inherit;
+  }
+  #links ul {
+    margin: 0;
+  }
+  #links li {
+    font-size: 20px;
+    margin: 0 20px;
+  }
+  #links span {
+    font-weight: bold;
+  }
+  #links a {
+    text-decoration: none;
+  }
+}
+
+
+
+
+@media (min-width : 1025px) {
+  /* For desktop: */
+  .background {
+    position: relative;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    flex-wrap:wrap;
+  }
+  #top {
+    font-size: 30px;
+  }
+  #top img {
+    height: 100px;
+  }
+  /**** P A G I N G ****/
+  #nextPage, #prevPage {
+    width: 90px;
+    top: 45%;
+  }
+  #nextPage img, #prevPage img {
+    width: 60px;
+  }
+  #nextPage p, #prevPage p {
+    font-size: 30px;
+  }
+  /**** F O O T E R ****/
+  footer {
+    background-color: none;
+    height: 0px;
+    bottom: 0;
+    width: 100%;
+    padding: 0;
+  }
+  footer img {
+    height: 25px;
+    position: absolute;
+    bottom: 32px;
+    left: 50px;
+  }
+  footer p {
+    position: absolute;
+    bottom: 28px;
+    left: 81px;
+    font-size: 20px;
+  }
+  /**** H O M E ****/
+  #home h1 {
+    font-size: 80px;
+    top: 38%;
+  }
+  #home h3 {
+    font-size: 40px;
+    top: 52%;
+  }
+  /**** A B O U T ****/
+  #about .aboutTxt {
+    font-size: 15px;
+  }
+  /**** P H O T O S ****/
+  .smallPolaroid {
+    width: 20%;
+    margin: 5px 3%;
+  }
+  .smallPolaroid p {
+    font-size: 90%;
+    margin-top: -4%;
+  }
+  #photoList {
+    top: 10%;
+    padding: 0;
+    width: 80%;
+    height: auto;
+    margin: 0 10%;
+  }
+  #links {
+    position: absolute;
+    bottom: 10%;
+    background-color: inherit;
+  }
+  #links ul {
+    margin: 0;
+  }
+  #links li {
+    font-size: 20px;
+    margin: 0 20px;
+  }
+  #links span {
+    font-weight: bold;
+  }
+  #links a {
+    text-decoration: none;
+  }
+}
+
+
+
+
+
+
 
 
 /**********************************************************************************************
 ********************* S E A R C H  +  P E R S O N A L I S E D  +  V O T E *********************
-**********************************************************************************************/
+**********************************************************************************************
 .bigPolaroid {
   position: absolute;
   top: 15%;
@@ -302,12 +537,12 @@ footer a {
 #socialLinks img {
   height: 40px;
   margin-right: 20px;
-}
+}*/
 
 
 /**********************************************************************************************
 ****************************************** V O T E D ******************************************
-**********************************************************************************************/
+**********************************************************************************************
 .mediumPolaroid {
   position: absolute;
   top: 25%;
@@ -353,85 +588,21 @@ footer a {
   width: 40px;
   top: -5px;
   left: 200px;
+}*/
+
+
+/*#searchBackground {
+  background-image: url("/assets/pexels-caps.png");
 }
 
-
-/**********************************************************************************************
-***************************************** P H O T O S *****************************************
-**********************************************************************************************/
-#vote a {
-  text-decoration: none;
+#personalisedBackground {
+  background-image: url("/assets/pexels-caps.png");
 }
 
-#vote {
-  position: absolute;
-  top: 45%;
-  right: 10%;
-  width: 303px;
-  font-size: 30px;
+#voteBackground {
+  background-image: url("/assets/pexels-row.png");
 }
 
-#vote img {
-  margin-bottom: -8px;
-  margin-right: 16px;
-}
-
-
-.smallPolaroid {
-  width: 20%;
-  height: 30%;
-  background-color: #fff;
-  margin: 0% 3%;
-}
-
-.smallPolaroid img {
-  width: 90%;
-  height: 75%;
-  margin: 5%;
-  margin-bottom: 3%;
-}
-
-.smallPolaroid p {
-  width: 100%;
-  font-size: 20px;
-  margin-top: -4%;
-  text-align: center;
-  color: #000;
-  font-weight: 300;
-}
-
-#photoList {
-  width: 80%;
-  margin: 7% 10%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-#links {
-  position: absolute;
-  bottom: 10%;
-  width: 100%;
-}
-
-#links ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-#links li {
-  font-size: 20px;
-  margin: 0 20px;
-}
-
-#links span {
-  font-weight: bold;
-}
-
-#links a {
-  text-decoration: none;
-}
+#votedBackground {
+  background-image: url("/assets/pexels-row.png");
+}*/
